[tool.poetry]
name = "portfolio-tracker"
version = "0.2.0"
description = "A python augmented spreadsheet to track portfolio performance"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xlwings = "^0.31.3"
pandas = "^2.2.2"
yfinance = "^0.2.40"
matplotlib = "^3.9.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
